fix(admin): Change property in admin calendar creation and fix datepicker overlap CSS

--- a/static/style.css
+++ b/static/style.css
@@ -69,7 +69,6 @@ h2 {
     border-radius: 16px;
     margin-bottom: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, .08);
-    overflow: hidden;
 }
 
 .cal-header {
